[gd_scene load_steps=5 format=3 uid="uid://doqv2xg72rvhe"]

[ext_resource type="PackedScene" uid="uid://bpuvt3yg5eiag" path="res://game/gameplay/camera/game_camera.tscn" id="1_rp52m"]
[ext_resource type="Script" uid="uid://cwk6s0f1dy343" path="res://game/levels/base_level.gd" id="1_vs8h0"]
[ext_resource type="PackedScene" uid="uid://2insylhj1rx5" path="res://game/ui/life/life_timer_ui.tscn" id="2_vfi3j"]
[ext_resource type="TileSet" uid="uid://3bpuaeka5wu" path="res://game/resources/tile_sets/terrain.tres" id="2_weh0f"]

[node name="base_level" type="Node2D"]
script = ExtResource("1_vs8h0")

[node name="canvas_layer" type="CanvasLayer" parent="."]

[node name="life_timer_ui" parent="canvas_layer" instance=ExtResource("2_vfi3j")]

[node name="transitions" type="Node2D" parent="."]

[node name="camera_focus_zones" type="Node2D" parent="."]

[node name="enemies" type="Node2D" parent="."]

[node name="save_points" type="Node2D" parent="."]

[node name="players" type="Node2D" parent="."]

[node name="npcs" type="Node2D" parent="."]

[node name="game_camera" parent="." instance=ExtResource("1_rp52m")]

[node name="tile_map" type="TileMapLayer" parent="."]
tile_set = ExtResource("2_weh0f")
